<resources xmlns:tools="http://schemas.android.com/tools">
    <!--MAIN -->
    <string name="app_name">E1T5_MOB</string>
    <string name="registrarse_button">REGISTRARSE</string>
    <string name="login_button">LOGIN</string>

    <!--REGISTRO -->
    <string name="logo_description">Logo</string>
    <string name="registro_title">REGISTRO</string>
    <string name="nombre_label">Nombre:</string>
    <string name="edit_text_hint">Introduce tu nombre</string>
    <string name="apellido_label">Apellido:</string>
    <string name="edit_text_hint2">Introduce tu apellido</string>
    <string name="fecha_label">Fecha Nacimiento:</string>
    <string name="edit_text_hint3">Introduce tu fecha</string>
    <string name="email_label">Email:</string>
    <string name="edit_text_hint4">Introduce tu email</string>
    <string name="contraseña_label">Contraseña:</string>
    <string name="edit_text_hint5">Introduce tu contraseña</string>
    <string name="registrarse1_button">REGISTRARSE</string>
    <string name="cuenta_label">¿Ya tienes cuenta?</string>
    <string name="login1_button">INCIAR SESION</string>


    <!--LOGIN -->
    <string name="email_label2">Email:</string>
    <string name="contraseña_label2">Contraseña:</string>
    <string name="login_title">INICIAR SESION</string>
    <string name="edit_text_hint1.1">Introduce tu email</string>
    <string name="edit_text_hint2.2">Introduce tu contraseña</string>
    <string name="login2_button">INICIAR SESION</string>
    <string name="pregunta_login">¿No tienes cuenta?</string>
    <string name="registro_button">REGISTRATE</string>

    <!--PERFIL -->
    <string name="perfil_title">PERFIL</string>
    <string name="nombre_perfil">Nombre:</string>
    <string name="apellido_perfil">Apellido:</string>
    <string name="fecha_perfil">Fecha:</string>
    <string name="email_perfil">Email:</string>
    <string name="color_button">TEMA</string>
    <string name="idioma_button">ITZULI</string>
    <string name="cerrar_button">CERRAR SESION</string>
    <string name="workouts_button">WORKOUTS</string>
    <string name="button_translate">EU</string>
    <string name="button_translate" tools:ignore="DuplicateDefinition">ES</string>



    <!--WORKOUTS -->
    <string name="workout_title">WORKOUTS</string>
    <string name="workoutHistorial_title">HISTORIAL DE WORKOUTS</string>
    <string name="perfil_button">PROFILA</string>
    <string name="jolastu_button">JOLASTU</string>
    <string name="entrenatzailea_button">ENTRENATZAILEA</string>
    <string name="itzuli_button">ITZULI</string>
</resources>