<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.RegistroActivity"
    android:background="@drawable/fondo2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/fitnation_logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/registro_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="uniform"
        android:text="@string/nombre_label"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:autofillHints="name"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="text"

        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="113dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"

        android:autoSizeTextType="uniform"
        android:text="@string/apellido_label"
        android:textColor="#762E10"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_text_hint2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="200dp"
        android:autofillHints="address"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"

        android:autoSizeTextType="uniform"
        android:text="@string/fecha_label"
        android:textColor="#762E10"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:textColor="#762E10"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/editTextText2"
        android:hint="@string/edit_text_hint3"
        tools:layout_editor_absoluteX="171dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="date"/>


</androidx.constraintlayout.widget.ConstraintLayout>