<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.e1_t5_mob.WorkoutActivity"
    android:background="@drawable/fondo">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/fitnation_logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/perfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/workout_title"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Workout History Title -->
    <TextView
        android:id="@+id/historialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/workoutHistorial_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/perfilTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Vertical TableLayout for Workout History -->
    <TableLayout
        android:id="@+id/historialTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/historialTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TableLayout>

    <!-- WebView para mostrar el video de YouTube -->
    <WebView
        android:id="@+id/videoWebView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/historialTableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/buttonPERFIL"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="160dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#949494"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/perfil_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="160dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#949494"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/jolastu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEntrenador"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#949494"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/entrenatzailea_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPERFIL" />

    <Button
        android:id="@+id/button6"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="147dp"
        android:autoSizeTextType="uniform"

        android:backgroundTint="@color/ORANGE"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/itzuli_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrenador" />

</androidx.constraintlayout.widget.ConstraintLayout>
