<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".PerfilActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/fitnation_logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/perfil_title"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNombreTitle"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:textSize="30dp"
        android:text="@string/nombre_perfil"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewApellidoTitle"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:textSize="30dp"
        android:text="@string/apellido_perfil"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNombreTitle"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewFechaTitle"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:textSize="30dp"
        android:text="@string/fecha_perfil"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewApellidoTitle"
        tools:ignore="UnusedAttribute" />
    <TextView
        android:id="@+id/textViewEmailTitle"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:textSize="30dp"
        android:text="@string/email_perfil"
        android:fontFamily="@font/agdasima_bold"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFechaTitle"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/buttonColor"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:fontFamily="@font/agdasima_bold"
        android:text="@string/color_button"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailTitle"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="72dp"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registroTextView"
        />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="60dp"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNombre" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="56dp"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFechaNacimiento" />

    <TextView
        android:id="@+id/textViewFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="60dp"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewApellido" />


</androidx.constraintlayout.widget.ConstraintLayout>


