<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.MainActivity"
    android:background="@drawable/fondo">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/fitnation_logo_transparent" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="440dp"
        android:backgroundTint="?android:attr/colorMultiSelectHighlight"
        android:text="@string/registrarse_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/material_dynamic_neutral50"
        android:textColor="@android:color/white"
        android:text="@string/login_button"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>