<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.e1_t5_mob.LoginActivity"
    android:background="@drawable/fondo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/fitnation_logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login_title"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:autoSizeTextType="uniform"
        android:text="@string/email_label2"
        android:textColor="#762E10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/editIntroduceEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:ems="10"
        android:hint="@string/edit_text_hint1.1"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textViewContraseñaLogin"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="68dp"
        android:autoSizeTextType="uniform"
        android:text="@string/contraseña_label2"
        android:textColor="#762E10"
        app:layout_constraintTop_toBottomOf="@id/editIntroduceEmail"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:layout_editor_absoluteX="68dp" />
    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="address"
        android:background="@android:color/background_light"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/textViewContraseñaLogin"
        android:hint="@string/edit_text_hint2.2"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="121dp"
        android:layout_height="55dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="376dp"
        android:backgroundTint="?android:attr/colorMultiSelectHighlight"
        android:text="@string/login2_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
